ë비밀번호 변경, í탈퇴 구현중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,11 @@ spring:
   # ==================================
   # 🚨 주의: 아래 인메모리 사용자는 개발 및 테스트용입니다.
   # 실제 운영 환경에서는 데이터베이스 기반 인증 또는 OAuth2를 사용해야 합니다.
+  servlet:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
 #  security:
 #    user:
 #      name: admin
